# cassio

./: CMakeLists.txt  README.md  exhaust.cas  factorial.cas  light.cas  vector.cas
examples/: docs.cas  factorial.cas  struct.cas  sum.cas
include/analyzer/: code_generator.h  lexical_analyzer.h  semantic_analyzer.h  syntatic_analyzer.h
include/core/: child.h  identifier.h  number.h  program.h  semantic_error.h  syntax_error.h
include/declaration/: capacity.h  declaration.h  defined_declaration.h  struct_declaration.h  type_declaration.h
include/expressions/: boolean_expression.h  expression.h  function_expression.h  input_expression.h  logical_expression.h  low_expression.h  math_expression.h  not_expression.h  number_expression.h  register_expression.h  string_expression.h  value_expression.h  variable_expression.h
include/function/: function.h  if_instruction.h  instruction.h  output_instruction.h  parameter.h  register_instruction.h  register_parameter.h  return_instruction.h  type_parameter.h  value_instruction.h  variable_instruction.h  while_instruction.h
include/tokens/: token.h
include/utils/: file.h
src/: cassio.cc
src/analyzer/: code_generator.cc  lexical_analyzer.cc  semantic_analyzer.cc  syntatic_analyzer.cc
src/core/: child.cc  identifier.cc  number.cc  program.cc
src/declaration/: capacity.cc  declaration.cc  defined_declaration.cc  struct_declaration.cc  type_declaration.cc
src/expressions/: boolean_expression.cc  expression.cc  function_expression.cc  input_expression.cc  logical_expression.cc  low_expression.cc  math_expression.cc  not_expression.cc  number_expression.cc  register_expression.cc  string_expression.cc  value_expression.cc  variable_expression.cc
src/function/: function.cc  if_instruction.cc  instruction.cc  output_instruction.cc  parameter.cc  register_instruction.cc  register_parameter.cc  return_instruction.cc  type_parameter.cc  value_instruction.cc  variable_instruction.cc  while_instruction.cc
src/utils/: file.cc
